syntax = "proto3";

package {{.PackageName}};

option go_package = "{{.ModulePath}}/proto";

// 用户服务定义
service UserService {
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  // 获取用户
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  // 更新用户  
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  // 删除用户
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  // 列出用户
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

// 用户模型
message User {
  // @gotags: json:"id" gorm:"primaryKey;autoIncrement" validate:"omitempty"
  int64 id = 1;
  
  // @gotags: json:"username" gorm:"uniqueIndex;not null" validate:"required,min=3,max=50"
  string username = 2;
  
  // @gotags: json:"email" gorm:"uniqueIndex;not null" validate:"required,email"
  string email = 3;
  
  // @gotags: json:"full_name" gorm:"not null" validate:"required,min=2,max=100"
  string full_name = 4;
  
  // @gotags: json:"phone" gorm:"index" validate:"omitempty,e164"
  string phone = 5;
  
  // @gotags: json:"avatar_url" gorm:"type:text" validate:"omitempty,url"
  string avatar_url = 6;
  
  // @gotags: json:"status" gorm:"default:active;index" validate:"oneof=active inactive suspended"
  string status = 7;
  
  // @gotags: json:"created_at" gorm:"autoCreateTime"
  int64 created_at = 8;
  
  // @gotags: json:"updated_at" gorm:"autoUpdateTime"
  int64 updated_at = 9;
  
  // @gotags: json:"-" gorm:"-"
  string password_hash = 10;
}

// 创建用户请求
message CreateUserRequest {
  // @gotags: json:"username" validate:"required,min=3,max=50"
  string username = 1;
  
  // @gotags: json:"email" validate:"required,email"
  string email = 2;
  
  // @gotags: json:"full_name" validate:"required,min=2,max=100"
  string full_name = 3;
  
  // @gotags: json:"phone" validate:"omitempty,e164"
  string phone = 4;
  
  // @gotags: json:"avatar_url" validate:"omitempty,url"
  string avatar_url = 5;
  
  // @gotags: json:"password" validate:"required,min=8,max=128"
  string password = 6;
}

// 创建用户响应
message CreateUserResponse {
  // @gotags: json:"success"
  bool success = 1;
  
  // @gotags: json:"message"
  string message = 2;
  
  // @gotags: json:"user,omitempty"
  User user = 3;
}

// 获取用户请求
message GetUserRequest {
  // @gotags: json:"id" validate:"required,min=1"
  int64 id = 1;
}

// 获取用户响应
message GetUserResponse {
  // @gotags: json:"success"
  bool success = 1;
  
  // @gotags: json:"message"
  string message = 2;
  
  // @gotags: json:"user,omitempty"
  User user = 3;
}

// 更新用户请求
message UpdateUserRequest {
  // @gotags: json:"id" validate:"required,min=1"
  int64 id = 1;
  
  // @gotags: json:"username" validate:"omitempty,min=3,max=50"
  string username = 2;
  
  // @gotags: json:"email" validate:"omitempty,email"
  string email = 3;
  
  // @gotags: json:"full_name" validate:"omitempty,min=2,max=100"
  string full_name = 4;
  
  // @gotags: json:"phone" validate:"omitempty,e164"
  string phone = 5;
  
  // @gotags: json:"avatar_url" validate:"omitempty,url"
  string avatar_url = 6;
  
  // @gotags: json:"status" validate:"omitempty,oneof=active inactive suspended"
  string status = 7;
}

// 更新用户响应
message UpdateUserResponse {
  // @gotags: json:"success"
  bool success = 1;
  
  // @gotags: json:"message"
  string message = 2;
  
  // @gotags: json:"user,omitempty"
  User user = 3;
}

// 删除用户请求
message DeleteUserRequest {
  // @gotags: json:"id" validate:"required,min=1"
  int64 id = 1;
}

// 删除用户响应
message DeleteUserResponse {
  // @gotags: json:"success"
  bool success = 1;
  
  // @gotags: json:"message"
  string message = 2;
}

// 列出用户请求
message ListUsersRequest {
  // @gotags: json:"page" validate:"omitempty,min=1"
  int32 page = 1;
  
  // @gotags: json:"page_size" validate:"omitempty,min=1,max=100"
  int32 page_size = 2;
  
  // @gotags: json:"status" validate:"omitempty,oneof=active inactive suspended"
  string status = 3;
  
  // @gotags: json:"search" validate:"omitempty,min=2,max=50"
  string search = 4;
}

// 列出用户响应
message ListUsersResponse {
  // @gotags: json:"success"
  bool success = 1;
  
  // @gotags: json:"message"
  string message = 2;
  
  // @gotags: json:"users"
  repeated User users = 3;
  
  // @gotags: json:"total"
  int64 total = 4;
  
  // @gotags: json:"page"
  int32 page = 5;
  
  // @gotags: json:"page_size"
  int32 page_size = 6;
}