/*
 * @Author: kamalyes 501893067@qq.com
 * @Date: 2025-11-08 00:30:00
 * @LastEditors: kamalyes 501893067@qq.com
 * @LastEditTime: 2025-11-08 00:30:00
 * @FilePath: \go-rpc-gateway\examples\05-grpc\main.go
 * @Description: gRPCæœåŠ¡é›†æˆç¤ºä¾‹ - å±•ç¤ºå¦‚ä½•é›†æˆgRPCæœåŠ¡åˆ°Gateway
 *
 * Copyright (c) 2024 by kamalyes, All Rights Reserved.
 */

package main

import (
	"encoding/json"
	"log"
	"net/http"
	"os"
	"os/signal"
	"syscall"
	"time"

	gateway "github.com/kamalyes/go-rpc-gateway"
	"google.golang.org/grpc"
)

// MockUserService æ¨¡æ‹Ÿçš„ç”¨æˆ·æœåŠ¡
type MockUserService struct{}

// MockProductService æ¨¡æ‹Ÿçš„äº§å“æœåŠ¡  
type MockProductService struct{}

func main() {
	// 1. åˆ›å»ºGatewayå®ä¾‹
	gw, err := gateway.New()
	if err != nil {
		log.Fatalf("åˆ›å»ºGatewayå¤±è´¥: %v", err)
	}

	// 2. æ³¨å†ŒgRPCæœåŠ¡ï¼ˆæ¨¡æ‹Ÿï¼‰
	registerGRPCServices(gw)

	// 3. æ³¨å†ŒHTTPè·¯ç”±ï¼ˆæ¨¡æ‹ŸgRPC-Gatewayç”Ÿæˆçš„è·¯ç”±ï¼‰
	registerHTTPRoutes(gw)

	log.Println("ğŸš€ gRPCæœåŠ¡é›†æˆç¤ºä¾‹å¯åŠ¨ä¸­...")
	log.Println("ğŸ“¡ æœåŠ¡ç«¯å£:")
	log.Println("   - HTTP Gateway: http://localhost:8080")
	log.Println("   - gRPC Server:  localhost:9090")
	log.Println()
	log.Println("ğŸ”Œ gRPCæœåŠ¡:")
	log.Println("   - UserService: ç”¨æˆ·ç®¡ç†æœåŠ¡")
	log.Println("   - ProductService: äº§å“ç®¡ç†æœåŠ¡")
	log.Println()
	log.Println("ğŸŒ HTTP APIç«¯ç‚¹:")
	log.Println("   - GET  /api/v1/users")
	log.Println("   - POST /api/v1/users")
	log.Println("   - GET  /api/v1/users/{id}")
	log.Println("   - GET  /api/v1/products")
	log.Println("   - POST /api/v1/products")
	log.Println("   - GET  /api/v1/services/status")
	log.Println()
	log.Println("ğŸ’¡ æµ‹è¯•å‘½ä»¤:")
	log.Println("   curl http://localhost:8080/api/v1/users")
	log.Println(`   curl -X POST -H "Content-Type: application/json" -d '{"name":"Alice","email":"alice@example.com"}' http://localhost:8080/api/v1/users`)

	// 4. è®¾ç½®ä¿¡å·å¤„ç†
	sigChan := make(chan os.Signal, 1)
	signal.Notify(sigChan, syscall.SIGINT, syscall.SIGTERM)

	// 5. å¯åŠ¨æœåŠ¡å™¨
	go func() {
		if err := gw.Start(); err != nil {
			log.Printf("æœåŠ¡å™¨å¯åŠ¨å¤±è´¥: %v", err)
		}
	}()

	// 6. ç­‰å¾…å…³é—­ä¿¡å·
	<-sigChan
	log.Println("ğŸ›‘ æ­£åœ¨ä¼˜é›…å…³é—­æœåŠ¡å™¨...")
	
	if err := gw.Stop(); err != nil {
		log.Printf("å…³é—­æœåŠ¡å™¨æ—¶å‡ºé”™: %v", err)
	}
	log.Println("âœ… æœåŠ¡å™¨å·²æˆåŠŸå…³é—­")
}

// registerGRPCServices æ³¨å†ŒgRPCæœåŠ¡
func registerGRPCServices(gw *gateway.Gateway) {
	// æ³¨å†Œç”¨æˆ·æœåŠ¡
	gw.RegisterService(func(s *grpc.Server) {
		// è¿™é‡Œé€šå¸¸ä¼šæ³¨å†ŒçœŸæ­£çš„gRPCæœåŠ¡
		// pb.RegisterUserServiceServer(s, &MockUserService{})
		log.Println("ğŸ“ å·²æ³¨å†Œ UserService gRPCæœåŠ¡")
	})

	// æ³¨å†Œäº§å“æœåŠ¡
	gw.RegisterService(func(s *grpc.Server) {
		// pb.RegisterProductServiceServer(s, &MockProductService{})
		log.Println("ğŸ“ å·²æ³¨å†Œ ProductService gRPCæœåŠ¡")
	})

	log.Println("âœ… æ‰€æœ‰gRPCæœåŠ¡æ³¨å†Œå®Œæˆ")
}

// registerHTTPRoutes æ³¨å†ŒHTTPè·¯ç”±ï¼ˆæ¨¡æ‹ŸgRPC-Gatewayç”Ÿæˆçš„è·¯ç”±ï¼‰
func registerHTTPRoutes(gw *gateway.Gateway) {
	// ç”¨æˆ·æœåŠ¡è·¯ç”±
	registerUserRoutes(gw)
	
	// äº§å“æœåŠ¡è·¯ç”±
	registerProductRoutes(gw)
	
	// æœåŠ¡çŠ¶æ€è·¯ç”±
	registerStatusRoutes(gw)
}

// registerUserRoutes æ³¨å†Œç”¨æˆ·æœåŠ¡è·¯ç”±
func registerUserRoutes(gw *gateway.Gateway) {
	// è·å–ç”¨æˆ·åˆ—è¡¨
	gw.RegisterHTTPRoute("/api/v1/users", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
		if r.Method == "GET" {
			users := []map[string]interface{}{
				{"id": 1, "name": "Alice", "email": "alice@example.com", "created_at": "2024-01-01T00:00:00Z"},
				{"id": 2, "name": "Bob", "email": "bob@example.com", "created_at": "2024-01-02T00:00:00Z"},
				{"id": 3, "name": "Charlie", "email": "charlie@example.com", "created_at": "2024-01-03T00:00:00Z"},
			}
			
			response := map[string]interface{}{
				"success": true,
				"data":    users,
				"total":   len(users),
				"note":    "Data from gRPC UserService (mocked)",
			}
			
			w.Header().Set("Content-Type", "application/json")
			json.NewEncoder(w).Encode(response)
		} else if r.Method == "POST" {
			// åˆ›å»ºç”¨æˆ·
			var reqData map[string]interface{}
			json.NewDecoder(r.Body).Decode(&reqData)
			
			newUser := map[string]interface{}{
				"id":         len(mockUsers) + 1,
				"name":       reqData["name"],
				"email":      reqData["email"],
				"created_at": time.Now().Format(time.RFC3339),
			}
			
			response := map[string]interface{}{
				"success": true,
				"data":    newUser,
				"message": "User created successfully",
				"note":    "Created via gRPC UserService (mocked)",
			}
			
			w.Header().Set("Content-Type", "application/json")
			w.WriteHeader(http.StatusCreated)
			json.NewEncoder(w).Encode(response)
		}
	}))

	// è·å–ç‰¹å®šç”¨æˆ·
	gw.RegisterHTTPRoute("/api/v1/users/", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
		if r.Method != "GET" {
			w.WriteHeader(http.StatusMethodNotAllowed)
			return
		}
		
		// ç®€å•è§£æIDï¼ˆå®é™…é¡¹ç›®ä¸­ä¼šä½¿ç”¨è·¯ç”±å‚æ•°ï¼‰
		userID := r.URL.Path[len("/api/v1/users/"):]
		
		user := map[string]interface{}{
			"id":         userID,
			"name":       "User " + userID,
			"email":      "user" + userID + "@example.com",
			"created_at": time.Now().Add(-24 * time.Hour).Format(time.RFC3339),
		}
		
		response := map[string]interface{}{
			"success": true,
			"data":    user,
			"note":    "User data from gRPC UserService (mocked)",
		}
		
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(response)
	}))
}

// registerProductRoutes æ³¨å†Œäº§å“æœåŠ¡è·¯ç”±
func registerProductRoutes(gw *gateway.Gateway) {
	// è·å–äº§å“åˆ—è¡¨
	gw.RegisterHTTPRoute("/api/v1/products", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
		if r.Method == "GET" {
			products := []map[string]interface{}{
				{"id": 1, "name": "iPhone 15", "price": 999.99, "category": "smartphones"},
				{"id": 2, "name": "MacBook Pro", "price": 1999.99, "category": "laptops"},
				{"id": 3, "name": "AirPods Pro", "price": 249.99, "category": "accessories"},
			}
			
			response := map[string]interface{}{
				"success": true,
				"data":    products,
				"total":   len(products),
				"note":    "Data from gRPC ProductService (mocked)",
			}
			
			w.Header().Set("Content-Type", "application/json")
			json.NewEncoder(w).Encode(response)
		} else if r.Method == "POST" {
			// åˆ›å»ºäº§å“
			var reqData map[string]interface{}
			json.NewDecoder(r.Body).Decode(&reqData)
			
			newProduct := map[string]interface{}{
				"id":       len(mockProducts) + 1,
				"name":     reqData["name"],
				"price":    reqData["price"],
				"category": reqData["category"],
			}
			
			response := map[string]interface{}{
				"success": true,
				"data":    newProduct,
				"message": "Product created successfully",
				"note":    "Created via gRPC ProductService (mocked)",
			}
			
			w.Header().Set("Content-Type", "application/json")
			w.WriteHeader(http.StatusCreated)
			json.NewEncoder(w).Encode(response)
		}
	}))
}

// registerStatusRoutes æ³¨å†ŒçŠ¶æ€è·¯ç”±
func registerStatusRoutes(gw *gateway.Gateway) {
	gw.RegisterHTTPRoute("/api/v1/services/status", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
		status := map[string]interface{}{
			"gateway": map[string]interface{}{
				"status":    "running",
				"version":   "1.0.0",
				"framework": "go-rpc-gateway",
			},
			"grpc_services": map[string]interface{}{
				"user_service": map[string]interface{}{
					"status":      "healthy",
					"endpoints":   []string{"/api/v1/users", "/api/v1/users/{id}"},
					"description": "ç”¨æˆ·ç®¡ç†æœåŠ¡",
				},
				"product_service": map[string]interface{}{
					"status":      "healthy", 
					"endpoints":   []string{"/api/v1/products"},
					"description": "äº§å“ç®¡ç†æœåŠ¡",
				},
			},
			"gateway_features": []string{
				"gRPC to HTTP translation",
				"Request/Response logging",
				"Rate limiting",
				"CORS support",
				"Security middleware",
				"Health checks",
				"Metrics collection",
			},
		}
		
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(status)
	}))
}

// æ¨¡æ‹Ÿæ•°æ®
var mockUsers = []map[string]interface{}{
	{"id": 1, "name": "Alice", "email": "alice@example.com"},
	{"id": 2, "name": "Bob", "email": "bob@example.com"},
}

var mockProducts = []map[string]interface{}{
	{"id": 1, "name": "iPhone", "price": 999.99},
	{"id": 2, "name": "MacBook", "price": 1999.99},
}